day0-deploy: use minio in vyos as tf backend

--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -81,7 +81,7 @@ $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
 .\Sync-TrivyDB.ps1 -SyncProfile "VyOS-Trivy.jsonc"
-# .\Sync-OCIImage.ps1 -SyncProfile "VyOS-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
+# .\Sync-TrivyDB.ps1 -SyncProfile "VyOS-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers/trivy" -Upload $false
 ```
 
 ### 11. Deploy CoreDNS in VyOS
