--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -80,6 +80,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+### 8. Deploy zitadel IAM in Day0 VM
+[TerraformWorkShop/Quadlet/zitadel/](../../TerraformWorkShop/Quadlet/zitadel/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/zitadel"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
 ### 8. Deploy zot image registry in Day0 VM
 [TerraformWorkShop/Quadlet/zot/](../../TerraformWorkShop/Quadlet/zot/)
 ```powershell
