zitadel-deploy-podman-kube: upgrade image version, update resourcesPreset, move pod man related value setting to terraform value set in zitadel backend

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -80,7 +80,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 8. Deploy zitadel IAM in Day0 VM
+### 8. Deploy zitadel IdP in Day0 VM
 [TerraformWorkShop/Quadlet/zitadel/](../../TerraformWorkShop/Quadlet/zitadel/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
