--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -89,6 +89,23 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+After deploy success, copy machine jwt token into [TerraformWorkShop/zitadel/](../../TerraformWorkShop/zitadel/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Zitadel"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+scp Day0-FCOS:/var/home/podmgr/.local/share/containers/storage/volumes/zitadel-backend-pvc/_data/zitadel-admin-sa.json .
+```
+
+### 9. Set LDAP provider in Zitadel
+[TerraformWorkShop/Zitadel/Day0](../../TerraformWorkShop/Zitadel/Day0)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Zitadel/Day0"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
 ### 8. Deploy zot image registry in Day0 VM
 [TerraformWorkShop/Quadlet/zot/](../../TerraformWorkShop/Quadlet/zot/)
 ```powershell
