--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -80,6 +80,16 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+<!-- 
+### 8. Deploy keycloak IdP in Day0 VM
+[TerraformWorkShop/Quadlet/keycloak/](../../TerraformWorkShop/Quadlet/keycloak/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/keycloak"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
 ### 8. Deploy zitadel IdP in Day0 VM
 [TerraformWorkShop/Quadlet/zitadel/](../../TerraformWorkShop/Quadlet/zitadel/)
 ```powershell
@@ -104,7 +114,7 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Zitadel/Day0"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
-```
+```  -->
 
 ### 8. Deploy zot image registry in Day0 VM
 [TerraformWorkShop/Quadlet/zot/](../../TerraformWorkShop/Quadlet/zot/)
