--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -80,6 +80,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+### 8. Deploy dex IdP in Day0 VM
+[TerraformWorkShop/Quadlet/dex/](../../TerraformWorkShop/Quadlet/dex/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/dex"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
 <!-- 
 ### 8. Deploy keycloak IdP in Day0 VM
 [TerraformWorkShop/Quadlet/keycloak/](../../TerraformWorkShop/Quadlet/keycloak/)
@@ -158,10 +167,10 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 
 
 ### 10. Config Minio ACL and bucket in Day0 MinIO
-[TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/IAM/)
+[TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/Day0/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/MinIO/IAM"
+$childPath="TerraformWorkShop/MinIO/Day0"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
