doc-day1: comment out minio in day1,

--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -126,6 +126,7 @@ $childPath="TerraformWorkShop/Quadlet/traefik-day1"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
+
 <!-- 
 ### 14. Deploy Consul-Template in Day1 VM
 [TerraformWorkShop/Quadlet/consul-template](../../TerraformWorkShop/Quadlet/consul-template/)
@@ -225,14 +226,14 @@ $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```
 
-### 22. Deploy MinIO in Day1 VM
+<!-- ### 22. Deploy MinIO in Day1 VM
 [TerraformWorkShop/Quadlet/minio-day1](../../TerraformWorkShop/Quadlet/minio-day1/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/minio-day1"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
-```
+``` -->
 
 ### 23. Config Minio ACL and bucket in Day1 MinIO
 [TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/IAM/)
