--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -212,7 +212,22 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/nfs-controller"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$env:NOMAD_TOKEN="xxx"
+
+# get nomad token
+$credential = Get-Credential -Message "credential to login vault"
+
+$vaultBaseUri = New-Object System.Uri("https://vault.day1.sololab/")
+$vaultLoginUri = New-Object System.Uri($vaultBaseUri, "/v1/auth/ldap/login/$($credential.UserName)")
+$vaultLoginUri.AbsoluteUri
+$vaultToken = $(curl.exe -s --request POST `
+    --data "{`"password`": `"$($credential.GetNetworkCredential().Password)`"}" `
+    $vaultLoginUri | jq.exe .auth.client_token).Replace('"', '')
+# get nomad token from kvv2 secret backend
+$vaultSecretUri = New-Object System.Uri($vaultBaseUri, "/v1/kvv2-nomad/data/token-management")
+$env:NOMAD_TOKEN = $(curl.exe -s -X GET `
+    -H "X-Vault-Token: $VaultToken" `
+    $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
+
 # terraform init; terraform apply ...
 ```
 
@@ -222,7 +237,8 @@ $env:NOMAD_TOKEN="xxx"
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Volulmes"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$env:NOMAD_TOKEN="xxx"
+# refer above step t get nomad token
+# $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```
 
@@ -235,7 +251,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ``` -->
 
-### 23. Config Minio ACL and bucket in Day1 MinIO
+### 23. Config Minio IAM and bucket in Day0 MinIO
 [TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/IAM/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
