--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -260,8 +260,14 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-<!-- 
-
+### 24. Deploy Grafana to Day1 VM
+[TerraformWorkShop/Quadlet/grafana/](../../TerraformWorkShop/Quadlet/grafana/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/grafana/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 19. Deploy Loki in Day1 VM
 [TerraformWorkShop/Quadlet/loki](../../TerraformWorkShop/Quadlet/loki/)
@@ -289,4 +295,3 @@ $childPath="TerraformWorkShop/Quadlet/alloy"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
--->
