refactor: update documentation and configuration for VyOS and Day0 setup; bump image versions for etcd, Grafana, Traefik, and Prometheus

--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -1,4 +1,4 @@
-### 1. Provision VyOS VM image by packer
+### Provision VyOS VM image by packer
 [PackerWorkShop/VyOS](../../PackerWorkShop/VyOS)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -8,10 +8,10 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 .\Invoke-PackerBuild.ps1 '15s-cloudinit'
 ```
 
-### 2. Prepare Terraform Plugins
+### Prepare Terraform Plugins
 [TerraformWorkShop](../../TerraformWorkShop/README.md)
 
-### 3. Create Hyper-V Internal Switch
+### Create Hyper-V Internal Switch
 [TerraformWorkShop/Hyper-V/Switch-Internal](../../TerraformWorkShop/Hyper-V/Switch-Internal/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -20,10 +20,10 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 4. Prepare ssh config
+### Prepare ssh config
 Copy dir [LocalWorkShop/.ssh](../../LocalWorkShop/.ssh/) to user home dir
 
-### 5. Create data disks
+### Create data disks
 [TerraformWorkShop/Hyper-V/Disks-Data](../../TerraformWorkShop/Hyper-V/Disks-Data/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -32,7 +32,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 6. Create and trust private root CA
+### Create and trust private root CA
 [TerraformWorkShop/TLS/RootCA](../../TerraformWorkShop/TLS/RootCA/)
 run:
 ```powershell
@@ -43,7 +43,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 After provisioned resources in this dir, install the root.crt to trust ca dir.
 
-### 7. Create VyOS VM
+### Create VyOS VM
 [TerraformWorkShop/Hyper-V/VM-VyOS](../../TerraformWorkShop/Hyper-V/VM-VyOS/)  
 Then config shellcrash if need [TerraformWorkShop\Hyper-V\VM-VyOS\shellclash\README.md](../../TerraformWorkShop/Hyper-V/VM-VyOS/shellclash/README.md)
 ```powershell
@@ -53,7 +53,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 8. Deploy zot image registry in VyOS VM
+### Deploy zot image registry in VyOS VM
 [TerraformWorkShop/Quadlet/zot/](../../TerraformWorkShop/VyOS/Container-Zot/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -62,7 +62,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 9. Sync container image to zot
+### Sync container image to zot
 [LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -73,18 +73,18 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 # .\Sync-OCIImage.ps1 -SyncProfile "VyOS.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -PrivateRegistry "zot.vyos.sololab.dev"
 ```
 
-### 10. Sync trivy-db to zot
+### Sync trivy-db to zot
 [LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
-.\Sync-TrivyDB.ps1 -SyncProfile "VyOS-Trivy.jsonc"
+.\Sync-TrivyDB.ps1 -SyncProfile "VyOS-Trivy.jsonc" # -Upload $false
 # .\Sync-TrivyDB.ps1 -SyncProfile "VyOS-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers/trivy" -Upload $false
 ```
 
-### 11. Deploy CoreDNS in VyOS
+### Deploy CoreDNS in VyOS
 [TerraformWorkShop/VyOS/Container-CoreDNS](../../TerraformWorkShop/VyOS/Container-CoreDNS/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -94,7 +94,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 Now you can try add doh config in browser, `https://doh.sololab.dev/dns-query`
 
-### 12. Deploy PowerDNS server in VyOS
+### Deploy PowerDNS server in VyOS
 [TerraformWorkShop/VyOS/Container-PowerDNS/](../../TerraformWorkShop/VyOS/Container-PDNS-Auth/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -152,7 +152,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ``` 
 -->
 
-### 13. Deploy MinIO server in VyOS
+### Deploy MinIO server in VyOS
 [TerraformWorkShop/VyOS/Container-MinIO](../../TerraformWorkShop/VyOS/Container-MinIO)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -161,7 +161,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 14. Init MinIO
+### Init MinIO
 [TerraformWorkShop/MinIO/VyOS](../../TerraformWorkShop/MinIO/VyOS)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -170,7 +170,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 15. Seed DNS record to PowerDNS
+### Seed DNS record to PowerDNS
 [TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -179,7 +179,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 16. Config haproxy in VyOS
+### Config haproxy in VyOS
 [TerraformWorkShop/VyOS/HAProxy](../../TerraformWorkShop/VyOS/HAProxy/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -188,7 +188,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 17. Deploy Cockpit WS in VyOS
+### Deploy Cockpit WS in VyOS
 [TerraformWorkShop/VyOS/Container-Cockpit](../../TerraformWorkShop/VyOS/Container-Cockpit)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
