--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -1,4 +1,4 @@
-### 1. Create Day0-FCOS VM
+### Create Day0-FCOS VM
 [TerraformWorkShop/Hyper-V/VM-Day0-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day0-FCOS/)
 1. Download FCOS Hyper-V image
 [Download Fedora CoreOS](https://fedoraproject.org/coreos/download?stream=stable)
@@ -26,7 +26,33 @@ terraform apply --auto-approve
 For the reason the the ignition process can only run before VM first boot up, 
 we have to turn on the VM manually.
 
-### 2. Deploy etcd server in Day0 VM
+### Prepare helm dependency
+[HelmWorkShop/helm-charts/charts](../../HelmWorkShop/helm-charts/charts)
+```powershell
+$originalDir=Get-Location | Select-Object -ExpandProperty path
+$repoDir=git rev-parse --show-toplevel
+$childPath="HelmWorkShop/helm-charts/charts"
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+Get-ChildItem | ForEach-Object {
+  Set-Location $_.fullname
+  helm dependency update
+}
+Set-Location -Path $originalDir
+```
+
+### Sync day0 related container images to container registry
+[LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Sync-OCIImage"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
+.\Sync-OCIImage.ps1 -SyncProfile "Day0.jsonc"  -PrivateRegistry "zot.vyos.sololab.dev" # -Upload $false
+# .\Sync-OCIImage.ps1 -SyncProfile "Day0.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -PrivateRegistry "zot.vyos.sololab.dev"
+```
+
+### Deploy etcd server in Day0 VM
 [TerraformWorkShop/Quadlet/etcd/](../../TerraformWorkShop/Quadlet/etcd/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -35,7 +61,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 3. Deploy CoreDNS server in Day0 VM
+### Deploy CoreDNS server in Day0 VM
 [TerraformWorkShop/Quadlet/coredns](../../TerraformWorkShop/Quadlet/coredns)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -44,7 +70,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 4. Deploy Traefik proxy in Day0 VM
+### Deploy Traefik proxy in Day0 VM
 [TerraformWorkShop/Quadlet/traefik-day0](../../TerraformWorkShop/Quadlet/traefik-day0)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -53,7 +79,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 5. Seed DNS record to etcd
+### Seed DNS record to etcd
 [TerraformWorkShop/etcd/skydns](../../TerraformWorkShop/etcd/skydns)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -62,7 +88,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 6. Deploy LLDAP server in Day0 VM
+### Deploy LLDAP server in Day0 VM
 [TerraformWorkShop/Quadlet/lldap](../../TerraformWorkShop/Quadlet/lldap)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -71,7 +97,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 7. Seed LDAP data in LLDAP
+### Seed LDAP data in LLDAP
 [TerraformWorkShop/LDAP/lldap/](../../TerraformWorkShop/LDAP/lldap/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -80,7 +106,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 8. Deploy zot image registry in Day0 VM
+### Deploy zot image registry in Day0 VM
 [TerraformWorkShop/Quadlet/zot/](../../TerraformWorkShop/Quadlet/zot/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -89,7 +115,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 9. Sync container image to zot
+### Sync container image to zot
 [LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1](../../LocalWorkShop/Sync-OCIImage/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -100,7 +126,7 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 # .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
 ```
 
-### 10. Sync trivy-db to zot
+### Sync trivy-db to zot
 [LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -111,7 +137,7 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 # .\Sync-TrivyDB.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers/trivy"
 ```
 
-### 11. Deploy dex IdP in Day0 VM
+### Deploy dex IdP in Day0 VM
 [TerraformWorkShop/Quadlet/dex/](../../TerraformWorkShop/Quadlet/dex/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -156,7 +182,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```  -->
 
-### 12. Deploy MinIO in Day0 VM
+### Deploy MinIO in Day0 VM
 [TerraformWorkShop/Quadlet/minio](../../TerraformWorkShop/Quadlet/minio/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -166,7 +192,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 
-### 13. Config Minio ACL and bucket in Day0 MinIO
+### Config Minio ACL and bucket in Day0 MinIO
 [TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/Day0/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -175,7 +201,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 14. Deploy PostgreSQL database in Day0 VM
+### Deploy PostgreSQL database in Day0 VM
 [TerraformWorkShop/Quadlet/postgresql-infra](../../TerraformWorkShop/Quadlet/postgresql-infra)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -185,7 +211,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 
-### 15. Deploy Cockpit web console in Day0 VM
+### Deploy Cockpit web console in Day0 VM
 [TerraformWorkShop/Quadlet/cockpit](../../TerraformWorkShop/Quadlet/cockpit)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -225,7 +251,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ``` 
 -->
 
-### 16. Deploy dufs in Day0 VM
+### Deploy dufs in Day0 VM
 [TerraformWorkShop/Quadlet/dufs](../../TerraformWorkShop/Quadlet/dufs/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -234,7 +260,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 17. Upload files to dufs
+### Upload files to dufs
 - Sync files to dufs [LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1](../../LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -247,7 +273,7 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 <!-- - Create dir `certs` in dufs: 
   - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (which create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir  -->
 
-### 18. Deploy Prometheus-Podman-Exporter in Day0 VM
+### Deploy Prometheus-Podman-Exporter in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/exporters-day0/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -256,7 +282,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 19. Deploy nfs-ganesha in Day0 VM
+### Deploy nfs-ganesha in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/nfs-ganesha/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
