grafana-ops-dashboard: move dashboard tf resource to dedicate tf state

--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -1,4 +1,4 @@
-### 1. Create Day1-FCOS VM
+### Create Day1-FCOS VM
 [TerraformWorkShop/Hyper-V/VM-Day1-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day1-FCOS/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -7,7 +7,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 2. Sync Day1 related container images to zot
+### Sync Day1 related container images to zot
 [LocalWorkShop/Sync-OCIImage](../../LocalWorkShop/Sync-OCIImage/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -18,7 +18,7 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 # .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day1.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
 ```
 
-### 3. Deploy Vault server to Day1 VM
+### Deploy Vault server to Day1 VM
 [TerraformWorkShop/Quadlet/vault](../../TerraformWorkShop/Quadlet/vault/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -27,7 +27,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 4. Config KVV2 secret backend in Vault
+### Config KVV2 secret backend in Vault
 [TerraformWorkShop/Vault/Secrets/KV-V2](../../TerraformWorkShop/Vault/Secrets/KV-V2/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -36,7 +36,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 5. Config PKI Root CA in Vault
+### Config PKI Root CA in Vault
 [TerraformWorkShop/Vault/Secrets/PKI/RootCA](../../TerraformWorkShop/Vault/Secrets/PKI/RootCA/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -45,7 +45,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 6. Config PKI intermediate CA in Vault
+### Config PKI intermediate CA in Vault
 [TerraformWorkShop/Vault/Secrets/PKI/Int_CA](../../TerraformWorkShop/Vault/Secrets/PKI/Int_CA)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -54,7 +54,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 7. Create certs in Vault
+### Create certs in Vault
 [TerraformWorkShop/Vault/Secrets/PKI/certs](../../TerraformWorkShop/Vault/Secrets/PKI/certs/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -63,7 +63,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 8. Config LDAP login and sync LDAP user/group to Vault
+### Config LDAP login and sync LDAP user/group to Vault
 [TerraformWorkShop/Vault/Auth/LDAP](../../TerraformWorkShop/Vault/Auth/LDAP/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -72,7 +72,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 9. Config Vault as OIDC provider
+### Config Vault as OIDC provider
 [TerraformWorkShop/Vault/Identity/OIDC](../../TerraformWorkShop/Vault/Identity/OIDC/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -82,7 +82,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # You might need to run `terraform apply` twice
 ```
 
-### 10. Config ACL policy in Vault
+### Config ACL policy in Vault
 [TerraformWorkShop/Vault/policy](../../TerraformWorkShop/Vault/policy/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -91,7 +91,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 11. Config Consul secret backend / gossip key secret for Consul in Vault
+### Config Consul secret backend / gossip key secret for Consul in Vault
 [TerraformWorkShop/Vault/Secrets/Consul](../../TerraformWorkShop/Vault/Secrets/Consul/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -100,7 +100,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 12. Deploy Consul server to Day1 VM
+### Deploy Consul server to Day1 VM
 [TerraformWorkShop/Quadlet/consul-server](../../TerraformWorkShop/Quadlet/consul-server/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -109,7 +109,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 13. Config ACL policy in Consul
+### Config ACL policy in Consul
 [TerraformWorkShop/Consul/ACL](../../TerraformWorkShop/Consul/ACL)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -118,7 +118,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 14. Deploy Traefik proxy in Day1 VM
+### Deploy Traefik proxy in Day1 VM
 [TerraformWorkShop/Quadlet/traefik-day1](../../TerraformWorkShop/Quadlet/traefik-day1/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -137,7 +137,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ``` -->
 
-### 15. Deploy consul client to Day0 VM
+### Deploy consul client to Day0 VM
 [TerraformWorkShop/Quadlet/consul-client](../../TerraformWorkShop/Quadlet/consul-client/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -146,7 +146,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 16. Deploy consul client to VyOS VM
+### Deploy consul client to VyOS VM
 [TerraformWorkShop/VyOS/consul-client](../../TerraformWorkShop/VyOS/Container-Consul)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -155,7 +155,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 17. Deploy Nomad server to Day1 VM
+### Deploy Nomad server to Day1 VM
 [TerraformWorkShop/Quadlet/nomad](../../TerraformWorkShop/Quadlet/nomad/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -164,7 +164,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 18. Config Nomad OIDC login and add management token
+### Config Nomad OIDC login and add management token
 copy nomad root token from Day1 VM
 ```shell
 ssh Day1-FCOS
@@ -179,7 +179,7 @@ $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```  
 
-### 19. Config Vault JWT auth for nomad
+### Config Vault JWT auth for nomad
 [TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Vault/Auth/JWT)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -188,7 +188,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 20. Config Consul JWT auth for nomad
+### Config Consul JWT auth for nomad
 [TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Consul/Auth/JWT)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -197,7 +197,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 21. Deploy Nomad client to Day1 VM
+### Deploy Nomad client to Day1 VM
 [TerraformWorkShop/System/nomad-client/](../../TerraformWorkShop/System/nomad-client/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -206,7 +206,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 22. Deploy nomad nfs csi controller
+### Deploy nomad nfs csi controller
 [TerraformWorkShop/Nomad/Jobs/nfs-controller/](../../TerraformWorkShop/Nomad/Jobs/nfs-controller/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -231,7 +231,7 @@ $env:NOMAD_TOKEN = $(curl.exe -s -X GET `
 # terraform init; terraform apply ...
 ```
 
-### 23. Deploy nomad csi volumes
+### Deploy nomad csi volumes
 [TerraformWorkShop/Nomad/Volulmes](../../TerraformWorkShop/Nomad/Volulmes/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -242,7 +242,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 24. Config Minio IAM and bucket in Day0 MinIO
+### Config Minio IAM and bucket in Day0 MinIO
 [TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/IAM/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -251,7 +251,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 25. Deploy Grafana to Day1 VM
+### Deploy Grafana to Day1 VM
 [TerraformWorkShop/Quadlet/grafana/](../../TerraformWorkShop/Quadlet/grafana/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -260,7 +260,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 26. Deploy Loki in Day1 VM
+### Deploy Loki in Day1 VM
 [TerraformWorkShop/Quadlet/loki](../../TerraformWorkShop/Quadlet/loki/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -269,7 +269,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 27. Deploy Alloy in Day0 VM
+### Deploy Alloy in Day0 VM
 [TerraformWorkShop/Quadlet/alloy](../../TerraformWorkShop/Quadlet/alloy/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -278,11 +278,20 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 28. Deploy Prometheus in Day1 VM
+### Deploy Prometheus in Day1 VM
 [TerraformWorkShop/Quadlet/prometheus](../../TerraformWorkShop/Quadlet/prometheus/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/prometheus"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### Add dashboard to Grafana
+[TerraformWorkShop/Grafana/Dashboard](../../TerraformWorkShop/Grafana/Dashboard/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Grafana/Dashboard"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
