node-exporter-deploy-podman-kube: Add Prometheus Node Exporter configuration and update image sync details

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -41,7 +41,7 @@ Get-ChildItem | ForEach-Object {
 Set-Location -Path $originalDir
 ```
 
-### Sync day0 related container images to container registry
+### Sync day0 related container images to zot vyos container registry
 [LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
