--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -196,3 +196,12 @@ $childPath="TerraformWorkShop/VyOS/Container-Cockpit"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
+
+### Deploy node exporter in VyOS
+[TerraformWorkShop/VyOS/Service-Monitoring](../../TerraformWorkShop/VyOS/Service-Monitoring)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/VyOS/Service-Monitoring"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
