--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -200,6 +200,16 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+### Deploy Prometheus Exporters in Day1 VM
+[TerraformWorkShop/Quadlet/exporters-day1](../../TerraformWorkShop/Quadlet/exporters-day1/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/exporters-day1"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+
 ### Add dashboard to Grafana
 [TerraformWorkShop/Grafana/Dashboard](../../TerraformWorkShop/Grafana/Dashboard/)
 ```powershell
