vault-deploy: move workload to day0 host

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -137,6 +137,7 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 # .\Sync-TrivyDB.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers/trivy"
 ```
 
+<!-- 
 ### Deploy dex IdP in Day0 VM
 [TerraformWorkShop/Quadlet/dex/](../../TerraformWorkShop/Quadlet/dex/)
 ```powershell
@@ -146,7 +147,6 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-<!-- 
 ### 8. Deploy keycloak IdP in Day0 VM
 [TerraformWorkShop/Quadlet/keycloak/](../../TerraformWorkShop/Quadlet/keycloak/)
 ```powershell
@@ -180,26 +180,7 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Zitadel/Day0"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
-```  -->
-
-### Deploy MinIO in Day0 VM
-[TerraformWorkShop/Quadlet/minio](../../TerraformWorkShop/Quadlet/minio/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Quadlet/minio"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-
-### Config Minio ACL and bucket in Day0 MinIO
-[TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/Day0/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/MinIO/Day0"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
+```  
 
 ### Deploy PostgreSQL database in Day0 VM
 [TerraformWorkShop/Quadlet/postgresql-infra](../../TerraformWorkShop/Quadlet/postgresql-infra)
@@ -208,7 +189,7 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/postgresql-infra"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
-```
+``` -->
 
 
 ### Deploy Cockpit web console in Day0 VM
@@ -278,6 +259,72 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/exporters-day0"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### Deploy Vault server to Day0 VM
+[TerraformWorkShop/Quadlet/vault](../../TerraformWorkShop/Quadlet/vault/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/vault"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### Config KVV2 secret backend in Vault
+[TerraformWorkShop/Vault/Secrets/KV-V2](../../TerraformWorkShop/Vault/Secrets/KV-V2/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/Secrets/KV-V2"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### Config LDAP login and sync LDAP user/group to Vault
+[TerraformWorkShop/Vault/Auth/LDAP](../../TerraformWorkShop/Vault/Auth/LDAP/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/Auth/LDAP"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### Config ACL policy in Vault
+[TerraformWorkShop/Vault/policy](../../TerraformWorkShop/Vault/policy/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/policy"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### Config Vault as OIDC provider
+[TerraformWorkShop/Vault/Identity/OIDC](../../TerraformWorkShop/Vault/Identity/OIDC/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/Identity/OIDC"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+# You might need to run `terraform apply` twice
+```
+
+
+### Deploy MinIO in Day0 VM
+[TerraformWorkShop/Quadlet/minio](../../TerraformWorkShop/Quadlet/minio/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/minio"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+
+### Config Minio ACL and bucket in Day0 MinIO
+[TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/IAM/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/MinIO/IAM"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
