docs: cancel day1 nomad client deploy, update documentation formatting and content
- Improve README.md formatting with markdown code blocks
- Update section headers in Day2.md from numbered to plain text
- Add detailed vault token retrieval instructions in Day2.md

--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -164,7 +164,6 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-
 ### Add dashboard to Grafana
 [TerraformWorkShop/Grafana/Dashboard](../../TerraformWorkShop/Grafana/Dashboard/)
 ```powershell
@@ -173,7 +172,6 @@ $childPath="TerraformWorkShop/Grafana/Dashboard"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
-
 
 ### Deploy Nomad server to Day1 VM
 [TerraformWorkShop/Quadlet/nomad](../../TerraformWorkShop/Quadlet/nomad/)
@@ -216,7 +214,7 @@ $childPath="TerraformWorkShop/Consul/Auth/JWT"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
-
+<!-- 
 ### Deploy Nomad client to Day1 VM
 [TerraformWorkShop/System/nomad-client/](../../TerraformWorkShop/System/nomad-client/)
 ```powershell
@@ -239,12 +237,12 @@ $credential = Get-Credential -Message "credential to login vault"
 $vaultBaseUri = New-Object System.Uri("https://vault.day0.sololab/")
 $vaultLoginUri = New-Object System.Uri($vaultBaseUri, "/v1/auth/ldap/login/$($credential.UserName)")
 $vaultLoginUri.AbsoluteUri
-$vaultToken = $(curl.exe -s --request POST `
+$vaultToken = $(curl.exe -k -s --request POST `
     --data "{`"password`": `"$($credential.GetNetworkCredential().Password)`"}" `
     $vaultLoginUri | jq.exe .auth.client_token).Replace('"', '')
 # get nomad token from kvv2 secret backend
 $vaultSecretUri = New-Object System.Uri($vaultBaseUri, "/v1/kvv2_nomad/data/token-management")
-$env:NOMAD_TOKEN = $(curl.exe -s -X GET `
+$env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
     -H "X-Vault-Token: $VaultToken" `
     $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
 
@@ -260,4 +258,4 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # refer above step t get nomad token
 # $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
-```
+``` -->
