--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -1,4 +1,4 @@
-### 1. Upload files to dufs
+### Upload files to dufs
 - Sync files to dufs [LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1](../../LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -9,7 +9,7 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 # .\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" -LocalStore "D:/Users/Public/Downloads/bin"
 ```
 
-### 2. Sync Day2 related container images to zot
+### Sync Day2 related container images to zot
 [LocalWorkShop/Sync-OCIImage](../../LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -20,15 +20,33 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 # .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day2.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
 ```
 
-### 3. Create Day2-FCOS VM
+### Create Day2-FCOS VM
 [TerraformWorkShop/Hyper-V/VM-Day2-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day2-FCOS/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Hyper-V/VM-Day2-FCOS"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+
+# get consul kv token from vault
+# login vault
+$credential = Get-Credential -Message "credential to login vault"
+
+$vaultBaseUri = New-Object System.Uri("https://vault.day0.sololab/")
+$vaultLoginEndpoint = "/v1/auth/ldap/login/$($credential.UserName)"
+$vaultLoginUri = New-Object System.Uri($vaultBaseUri, "/v1/auth/ldap/login/$($credential.UserName)")
+$vaultLoginUri.AbsoluteUri
+$vaultToken = $(curl.exe -k -s --request POST `
+    --data "{`"password`": `"$($credential.GetNetworkCredential().Password)`"}" `
+    $vaultLoginUri | jq.exe .auth.client_token).Replace('"', '')
+# get consul kv token from kvv2 secret backend
+$vaultSecretUri = New-Object System.Uri($vaultBaseUri, "/v1/kvv2_consul/data/token-tf_backend")
+$env:CONSUL_HTTP_TOKEN = $(curl.exe -k -s -X GET `
+    -H "X-Vault-Token: $vaultToken" `
+    $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
+
 # terraform init; terraform apply ...
 ```
-
+<!-- 
 ### 4. Deploy nomad nfs csi node
 [TerraformWorkShop/Nomad/Jobs/nfs-controller/](../../TerraformWorkShop/Nomad/Jobs/nfs-nodes/)
 ```powershell
@@ -55,18 +73,38 @@ $env:NOMAD_TOKEN = $(curl.exe -s -X GET `
 
 # $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
-```
+``` -->
 
-### 5. Deploy Traefik nomad job
+### Deploy Traefik nomad job
 [TerraformWorkShop/Nomad/Jobs/traefik/](../../TerraformWorkShop/Nomad/Jobs/traefik/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/traefik/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+
+# get nomad management token from vault
+# login vault
+$credential = Get-Credential -Message "credential to login vault"
+
+$vaultBaseUri = New-Object System.Uri("https://vault.day0.sololab/")
+$vaultLoginEndpoint = "/v1/auth/ldap/login/$($credential.UserName)"
+$vaultLoginUri = New-Object System.Uri($vaultBaseUri, "/v1/auth/ldap/login/$($credential.UserName)")
+$vaultLoginUri.AbsoluteUri
+$vaultToken = $(curl.exe -k -s --request POST `
+    --data "{`"password`": `"$($credential.GetNetworkCredential().Password)`"}" `
+    $vaultLoginUri | jq.exe .auth.client_token).Replace('"', '')
+# get nomad token from kvv2 secret backend
+$vaultSecretUri = New-Object System.Uri($vaultBaseUri, "/v1/kvv2_nomad/data/token-management")
+$env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
+    -H "X-Vault-Token: $vaultToken" `
+    $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
+
+# $env:NOMAD_TOKEN="xxx"
+# terraform init; terraform apply ...
 # terraform init; terraform apply ...
 ```
 
-### 5. Deploy Grafana nomad job
+### Deploy Grafana nomad job
 [TerraformWorkShop/Nomad/Jobs/grafana/](../../TerraformWorkShop/Nomad/Jobs/grafana/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
