--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -104,11 +104,11 @@ $env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
 # terraform init; terraform apply ...
 ```
 
-### Deploy Grafana nomad job
-[TerraformWorkShop/Nomad/Jobs/grafana/](../../TerraformWorkShop/Nomad/Jobs/grafana/)
+### Deploy exporters nomad job
+[TerraformWorkShop/Nomad/Jobs/exporters/](../../TerraformWorkShop/Nomad/Jobs/exporters/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Nomad/Jobs/grafana/"
+$childPath="TerraformWorkShop/Nomad/Jobs/exporters/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
