--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -112,3 +112,12 @@ $childPath="TerraformWorkShop/Nomad/Jobs/exporters/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
+
+### Deploy PgBouncer nomad job
+[TerraformWorkShop/Nomad/Jobs/pgbouncer/](../../TerraformWorkShop/Nomad/Jobs/pgbouncer/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/pgbouncer/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
